Updated app to rely on a content provider to store the bitmaps. The app retains the uris and filenames only. Updated the readme; included some screenshots.

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-A simple UI to view a images with a color tinting using PorterDuff Color Filter. The specific mode is source Atop.
+# Asset Color Tinting App
+A simple UI to view a images with a color tinting using PorterDuff Color Filter
+
+- Control Each channel of the tint color using a slider
+- Keep a list of recently opened assets for easy reference
+
+[Tinted image bar](../images/Screenshot_20180507-030822.png)
+
+[Tinted image couch](../images/Screenshot_20180507-031136.png)
